--- a/app/src/main/res/layout/activity_apresentacao.xml
+++ b/app/src/main/res/layout/activity_apresentacao.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.fatec.activity.ApresentacaoActivity">
+    tools:context="edu.fatec.test.ApresentacaoActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
