--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,83 +5,95 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="edu.fatec.activity.DuvidaTestActivity">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/infoDuvida"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center_horizontal|center_vertical"
-            android:background="@color/colorWarning"
-            android:orientation="horizontal">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_actionbar" />
 
-            <TextView
-                android:id="@+id/textInfoDuvida"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="12dp"
-                android:text="Atualizando informações de dúvidas"
-                android:textColor="@color/textColorPrimary"
-                android:textSize="15sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_margin="10dp"
-                android:indeterminateTint="@color/textColorPrimary" />
-        </LinearLayout>
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeRefreshDuvida"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/infoDuvida">
+            tools:context="edu.fatec.test.DuvidaTestActivity">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycleViewDuvidas"
+            <LinearLayout
+                android:id="@+id/infoDuvida"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorWarning"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textInfoDuvida"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Atualizando informações de dúvidas"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="15sp" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="10dp"
+                    android:indeterminateTint="@color/textColorPrimary" />
+            </LinearLayout>
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeRefreshDuvida"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:paddingBottom="70dp"
-                android:paddingLeft="@dimen/activity_margin_recycle"
-                android:paddingRight="@dimen/activity_margin_recycle"
-                android:paddingTop="@dimen/activity_margin_recycle"
-                android:scrollbars="vertical" />
+                android:layout_below="@+id/infoDuvida">
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycleViewDuvidas"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:paddingBottom="70dp"
+                    android:paddingLeft="@dimen/activity_margin_recycle"
+                    android:paddingRight="@dimen/activity_margin_recycle"
+                    android:paddingTop="@dimen/activity_margin_recycle"
+                    android:scrollbars="vertical" />
 
-        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/novaDuvida"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="@color/colorAccent"
-            app:rippleColor="@color/colorAccentRipple"
-            app:borderWidth="0dp"
-            app:elevation="5dp"/>
-    </RelativeLayout>
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+            <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/novaDuvida"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_add_white_24dp"
+                app:backgroundTint="@color/colorAccent"
+                app:borderWidth="0dp"
+                app:elevation="5dp"
+                app:rippleColor="@color/colorAccentRipple" />
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/backgroundList"
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:background="#ffeeeeee"
         android:layout_gravity="left|start"
+        android:background="#ffeeeeee"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -93,19 +105,19 @@
                 android:id="@+id/infoNomeUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nome do Usuario"
-                android:textSize="20sp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginLeft="15dp"
+                android:text="Nome do Usuario"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/infoEmailUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="usuario@email.com.br"
-                android:textSize="15sp"
                 android:layout_below="@id/infoNomeUsuario"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginLeft="15dp"
+                android:text="usuario@email.com.br"
+                android:textSize="15sp" />
 
         </RelativeLayout>
 
@@ -124,7 +136,7 @@
             android:background="#ffeeeeee"
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:paddingTop="10dp"/>
+            android:paddingTop="10dp" />
 
     </LinearLayout>
 
