--- a/app/src/main/res/layout/activity_nova_duvida.xml
+++ b/app/src/main/res/layout/activity_nova_duvida.xml
@@ -7,128 +7,140 @@
     tools:context="edu.fatec.activity.NovaDuvidaActivity">
 
     <LinearLayout
-        android:id="@+id/backgroundNovaDuvida"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorWarning"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal|center_vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textInfoNovaDuvida"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_actionbar" />
+
+        <LinearLayout
+            android:id="@+id/backgroundNovaDuvida"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Criando sua duvida"
-            android:layout_margin="10dp"
-            android:textColor="@color/textColorPrimary"
-            android:textSize="15sp" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorWarning"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
-        <ProgressBar
-            android:id="@+id/progressBarDuvida"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:indeterminateTint="@color/textColorPrimary"/>
+            <TextView
+                android:id="@+id/textInfoNovaDuvida"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Criando sua duvida"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="15sp" />
 
-    </LinearLayout>
+            <ProgressBar
+                android:id="@+id/progressBarDuvida"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_margin="10dp"
+                android:indeterminateTint="@color/textColorPrimary" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin"
-        android:layout_below="@id/backgroundNovaDuvida">
+        </LinearLayout>
 
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/backgroundTituloNovaDuvida"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:minHeight="55dp"
-            card_view:cardCornerRadius="2dp">
+            android:layout_height="match_parent"
+            android:layout_below="@id/backgroundNovaDuvida"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
 
-            <EditText
-                android:id="@+id/tituloNovaDuvida"
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/backgroundTituloNovaDuvida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/labelTituloDuvida"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@android:color/transparent"
-                android:hint="Titúlo da Dúvida"/>
+                android:layout_marginBottom="15dp"
+                android:minHeight="55dp"
+                card_view:cardCornerRadius="2dp">
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/backgroundConteudoNovaDuvida"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:minHeight="55dp"
-            card_view:cardCornerRadius="2dp">
-
-            <EditText
-                android:id="@+id/conteudoNovaDuvida"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@android:color/transparent"
-                android:hint="Conteúdo da Dúvida"/>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/backgroundMateriasDuvida"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            card_view:cardCornerRadius="2dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <edu.fatec.util.MultiSelectionSpinner
-                    android:id="@+id/spinnerMaterias"
+                <EditText
+                    android:id="@+id/tituloNovaDuvida"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"/>
+                    android:layout_below="@+id/labelTituloDuvida"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent"
+                    android:hint="Titúlo da Dúvida" />
 
-            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/backgroundTagNovaDuvida"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:minHeight="55dp"
-            card_view:cardCornerRadius="2dp">
-
-            <EditText
-                android:id="@+id/tagsNovaDuvida"
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/backgroundConteudoNovaDuvida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@android:color/transparent"
-                android:hint="Palavras-chave para Dúvida" />
+                android:layout_marginBottom="15dp"
+                android:minHeight="55dp"
+                card_view:cardCornerRadius="2dp">
 
-        </android.support.v7.widget.CardView>
+                <EditText
+                    android:id="@+id/conteudoNovaDuvida"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent"
+                    android:hint="Conteúdo da Dúvida" />
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/backgroundMateriasDuvida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                card_view:cardCornerRadius="2dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <edu.fatec.util.MultiSelectionSpinner
+                        android:id="@+id/spinnerMaterias"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="20dp" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/backgroundTagNovaDuvida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:minHeight="55dp"
+                card_view:cardCornerRadius="2dp">
+
+                <EditText
+                    android:id="@+id/tagsNovaDuvida"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent"
+                    android:hint="Palavras-chave para Dúvida" />
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -141,8 +153,8 @@
         android:layout_marginRight="10dp"
         android:src="@drawable/ic_done_white_24dp"
         app:backgroundTint="@color/colorAccent"
-        app:rippleColor="@color/colorAccentRipple"
         app:borderWidth="0dp"
-        app:elevation="5dp"/>
+        app:elevation="5dp"
+        app:rippleColor="@color/colorAccentRipple" />
 
 </RelativeLayout>
