--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -5,46 +5,58 @@
     tools:context="edu.fatec.activity.RespostaActivity">
 
     <LinearLayout
-        android:id="@+id/backgroundDuvidaResposta"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textConteudoDuvida"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_actionbar" />
+
+        <LinearLayout
+            android:id="@+id/backgroundDuvidaResposta"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Conteudo da Duvida"
-            android:textColor="@color/textColorPrimary"
-            android:textSize="15sp" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textConteudoDuvida"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Conteudo da Duvida"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="15sp" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshResposta"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/backgroundDuvidaResposta">
+        </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/cardList"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshResposta"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingBottom="90dp"
-            android:paddingLeft="@dimen/activity_margin_recycle"
-            android:paddingRight="@dimen/activity_margin_recycle"
-            android:paddingTop="@dimen/activity_margin_recycle"
-            android:scrollbars="vertical" />
+            android:layout_below="@+id/backgroundDuvidaResposta">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/cardList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="90dp"
+                android:paddingLeft="@dimen/activity_margin_recycle"
+                android:paddingRight="@dimen/activity_margin_recycle"
+                android:paddingTop="@dimen/activity_margin_recycle"
+                android:scrollbars="vertical" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -67,7 +79,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Responder esta dúvida"
-            android:minHeight="70dp"/>
+            android:minHeight="70dp" />
 
     </android.support.v7.widget.CardView>
 
@@ -86,10 +98,11 @@
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
         android:src="@drawable/ic_send_white_24dp"
-        app:fabSize="mini"
         app:backgroundTint="@color/inactive"
-        app:rippleColor="@color/colorAccentRipple"
         app:borderWidth="0dp"
-        app:elevation="5dp"/>
+        app:elevation="5dp"
+        app:fabSize="mini"
+        app:rippleColor="@color/colorAccentRipple" />
+
 
 </RelativeLayout>
