--- a/app/src/main/res/layout/layout_duvida.xml
+++ b/app/src/main/res/layout/layout_duvida.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="2dp"
-    android:elevation="5dp">
+    card_view:cardCornerRadius="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
