--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,13 +10,11 @@
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
 
         <item name="actionMenuTextColor">@color/textColorPrimary</item>
         <item name="actionModeBackground">@color/colorAccent</item>
         <item name="editTextColor">@android:color/black</item>
-        <item name="colorButtonNormal">@color/colorAccent</item>
-
+        <item name="colorButtonNormal">@color/colorPrimary</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
     </style>
 
