--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,13 +57,13 @@
         android:id="@+id/scrollView3"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/infoLogin"
-        android:layout_margin="@dimen/activity_vertical_margin">
+        android:layout_below="@id/infoLogin">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="@dimen/activity_vertical_margin">
 
             <LinearLayout
                 android:layout_width="match_parent"
