--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context="edu.fatec.activity.MainActivity">
+
     <item
-        android:id="@+id/action_search"
-        app:showAsAction="ifRoom"
+        android:id="@+id/menu_pesquisa"
+        app:showAsAction="collapseActionView|ifRoom"
         android:icon="@drawable/ic_search_white_24dp"
-        android:orderInCategory="100"
         android:title="Pesquisar"/>
+
 </menu>
